tests/errors/surf_parse_12.ki
# PARSER: a member access where '.' is followed by a numeric literal, not a name
var x = "abc"
discard x.5